--- a/dotenv_files/.env
+++ b/dotenv_files/.env
@@ -3,7 +3,7 @@ SECRET_KEY="8kIRW5q396|DK@-##(32(4dC,gXc|9jqlgLnx]|dY+E_VEiQFvd6>:S4=\f<:"
 # 0 False, 1 True
 DEBUG="1"
 
-ALLOWED_HOSTS="127.0.0.1, localhost"
+ALLOWED_HOSTS="*"
 
 DB_ENGINE="django.db.backends.postgresql"
 POSTGRES_DB="apollo_api"
